# fxlookup

./: .gitignore  fx-rate-spec.md
fx_rates/: BUILD_PROMPT.md  README.md  backfill.py  fbdi_all_weeks.csv  ledger.db  pyproject.toml
fx_rates/evidence/01KPBKQSDDCA5RRMZQJB58RB2E/: boe_raw.csv  boe_request.json  fbdi_upload.csv  manifest.json  rates_derived.json
fx_rates/evidence/01KPBKS3QPXVCKPJ0GHAZZWE4T/: boe_raw.csv  boe_request.json  fbdi_upload.csv  manifest.json  rates_derived.json
fx_rates/evidence/01KPBKS5XBGX7WW6P7GJNV04TF/: boe_raw.csv  boe_request.json  fbdi_upload.csv  manifest.json  rates_derived.json
fx_rates/evidence/01KPBKS7P5QSW4VYZQHFRDVPDY/: boe_raw.csv  boe_request.json  fbdi_upload.csv  manifest.json  rates_derived.json
fx_rates/evidence/01KPBKS9ATJJKNH9KYTJVSNWM0/: boe_raw.csv  boe_request.json  fbdi_upload.csv  manifest.json  rates_derived.json
fx_rates/evidence/01KPBKSARZ05QZ79Z2W6D1ZBK3/: boe_raw.csv  boe_request.json  fbdi_upload.csv  manifest.json  rates_derived.json
fx_rates/evidence/01KPBKSC693NN8JB496ZQYT9RG/: boe_raw.csv  boe_request.json  fbdi_upload.csv  manifest.json  rates_derived.json
fx_rates/evidence/01KPBKSDMGZ4R1KXZMGKQAHVT6/: boe_raw.csv  boe_request.json  fbdi_upload.csv  manifest.json  rates_derived.json
fx_rates/evidence/01KPBKSF5SSF15FEXHHV5Y1R6F/: boe_raw.csv  boe_request.json  fbdi_upload.csv  manifest.json  rates_derived.json
fx_rates/evidence/01KPBKSH2KZ3CK9EMV57FG7KRJ/: boe_raw.csv  boe_request.json  fbdi_upload.csv  manifest.json  rates_derived.json
fx_rates/fx_rates/: __init__.py  agent_api.py  cli.py
(+317 files in other folders)
