[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fx-rates"
version = "0.1.0"
description = "Bank of England FX rate fetcher with FBDI-ready CSV output for Oracle Fusion"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "pandas>=2.2",
    "holidays>=0.40",
    "python-ulid>=2.0",
    "typer>=0.12",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "responses>=0.25",
]

[project.scripts]
fx-rates = "fx_rates.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["fx_rates"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
